# ESP_USB_HOST

./: README.md
esp-usb-ai/: CMakeLists.txt  platformio.ini  sdkconfig
esp-usb-ai/include/: README  SensorManager.h  USBManager.h  config.h
esp-usb-ai/src/: CMakeLists.txt  idf_component.yml  main.cpp
